# Clinical-Intelligence-Agent

./: README.md
clinical-intelligence-agent/: .env.example  README.md  pyproject.toml
clinical-intelligence-agent/data/synthetic/: generate_notes.py
clinical-intelligence-agent/docs/: architecture.html
clinical-intelligence-agent/scripts/: ingest_data.py
clinical-intelligence-agent/src/: __init__.py
clinical-intelligence-agent/src/agents/: extractor.py  orchestrator.py  synthesizer.py  verifier.py
clinical-intelligence-agent/src/mcp_server/: server.py
clinical-intelligence-agent/src/retrieval/: embeddings.py  hnsw_index.py  reranker.py
clinical-intelligence-agent/src/utils/: config.py
clinical-intelligence-agent/tests/: test_extractor.py
docs/: architecture.html
