[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-intelligence-agent"
version = "0.1.0"
description = "Multi-agent clinical document intelligence system with MCP server — runs on local/free inference"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    # Agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",

    # LLM providers (all free-tier compatible)
    "ollama>=0.3.0",                # Local inference
    "groq>=0.11.0",                 # Free tier: 500K tokens/day
    "cohere>=5.11.0",               # Free tier: Rerank 3.5 + Embed 4
    "google-generativeai>=0.8.0",   # Free tier: Gemini 2.5 Flash, 1M context

    # Embeddings
    "transformers>=4.45.0",         # BioBERT
    "torch>=2.4.0",
    "sentence-transformers>=3.2.0",

    # Vector search (your HNSW)
    "numpy>=1.26.0",
    "scipy>=1.13.0",

    # MCP server
    "fastmcp>=0.9.0",

    # Data handling
    "pydantic>=2.9.0",
    "pandas>=2.2.0",
    "PyMuPDF>=1.24.0",             # PDF ingestion
    "python-docx>=1.1.0",

    # Evaluation
    "ragas>=0.2.0",
    "datasets>=3.0.0",

    # Observability
    "langfuse>=2.55.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",

    # API & serving
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",

    # UI
    "streamlit>=1.39.0",
    "plotly>=5.24.0",

    # Dev
    "python-dotenv>=1.0.0",
    "rich>=13.8.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",             # Retries for rate limits
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
